--- a/CSS/style.css
+++ b/CSS/style.css
@@ -417,12 +417,12 @@ nav a {
 
 .fake {
     position: absolute;
-    top: 1000px;
+    top: 880px;
     left: 0;
     z-index: 2;
-    width: 1280px;
+    width: 1500px;
     height: 720px;
-    background: linear-gradient(#000,#A9A9A9);
+    background: linear-gradient(#202020,#D3D3D3);
 }
 
 
@@ -476,6 +476,13 @@ nav a {
     margin-top: -20px;
     width: 100%;
 }
+
+#first{
+    position: absolute;
+    top: 100px;
+    
+}
+
 
 ul {
     list-style: none;
