--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ body {
     left: 0;
     width: 1440px;
     height: 1500px;
-    z-index: 7;
+    z-index: 9;
     background-color: #000;
     opacity: 1;
     animation: backgroundfill;
@@ -30,20 +30,20 @@ body {
 @keyframes backgroundfill {
     0% {
         opacity: 1;
-        z-index: 7;
+        z-index: 10;
         color: #000;
     }
 
     100% {
         opacity: 0;
-        z-index: 7;
+        z-index: 10;
     }
 }
 
 .sora h1 {
     font-weight: 1000;
     font-size: 50px;
-    z-index: 8;
+    z-index: 10;
     color: #fff;
 
 }
@@ -52,7 +52,7 @@ body {
     position: absolute;
     top: 350px;
     left: 70px;
-    z-index: 8;
+    z-index: 9;
     width: 1000px;
     height: 100px;
     line-height: 100px;
@@ -65,7 +65,7 @@ body {
     position: absolute;
     background-color: #fff;
     bottom: 0;
-    z-index: 8;
+    z-index: 9;
     height: 1px;
     width: 900px;
     opacity: 0;
@@ -74,7 +74,7 @@ body {
 .sora:before {
     animation: bottomAnim 2.5s linear 1s 1;
     animation-fill-mode: both;
-    z-index: 8;
+    z-index: 9;
     opacity: 1;
 }
 
@@ -91,20 +91,20 @@ body {
 }
 
 .player1 {
-    z-index: 6;
+    z-index: 8;
     position: absolute;
     top: 1100px;
+    left: 250px;
     width: 1000px;
     height: 500px;
     background-color: white;
-    z-index: 5;
     margin:inherit;
 }
 
 .player1 img {
-    width: 300px;
+    width: 400px;
     margin: 20px;
-    z-index: 5;
+
 }
 
 #sidber {
@@ -118,13 +118,14 @@ body {
 
 
 nav {
+    height: 120px;
     background-color: #000;
     border: 2px solid #fff;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 6;
+    z-index: 9;
     box-sizing: border-box;
 }
 
@@ -158,7 +159,7 @@ nav li {
     height: 0;
     border-left: 1000px solid black;
     border-bottom: 600px solid transparent;
-    z-index: 2;
+    z-index: 7;
 }
 
 .shape1 {
@@ -169,7 +170,7 @@ nav li {
     height: 0;
     border-right: 500px solid black;
     border-bottom: 600px solid transparent;
-    z-index: 2;
+    z-index: 7;
 }
 
 .shape2 {
@@ -178,7 +179,7 @@ nav li {
     left: 0;
     height: 0;
     width: 0;
-    z-index: 4;
+    z-index: 7;
     color: #000;
     border-top: 810px solid transparent;
     border-left: 750px solid;
@@ -188,7 +189,7 @@ nav li {
     position: absolute;
     top: 1000px;
     right: 0;
-    z-index: 4;
+    z-index: 7;
     color: #000;
     border-top: 700px solid transparent;
     border-right: 1000px solid;
@@ -198,7 +199,7 @@ nav li {
     position: absolute;
     top: 1615px;
     right: 0;
-    z-index: 4;
+    z-index: 7;
     color: #000;
     border-bottom: 380px solid transparent;
     border-right: 1060px solid;
@@ -210,7 +211,7 @@ nav li {
     width: 300px;
     top: 540px;
     right: 405px;
-    z-index: 4;
+    z-index: 6;
     opacity: 0.8;
 
 }
@@ -232,7 +233,7 @@ nav li {
     margin-top: 520px;
     font-size: 100px;
     color: white;
-    z-index: 5;
+    z-index: 7;
     position: relative;
     right: 55px;
 }
@@ -242,45 +243,13 @@ nav li {
     color: #fff;
     margin-left: 520px;
     font-size: 175px;
-    z-index: 4;
+    z-index: 7;
     position: relative;
     top: -65px;
     right: 45px;
 }
 
 
-.gg h3 {
-    position: absolute;
-    top: 150px;
-    left: 65px;
-    font-size: 50px;
-    color: #fff;
-    z-index: 4;
-
-}
-
-.gg h4 {
-    position: absolute;
-    top: 225px;
-    left: 105px;
-    font-size: 50px;
-    color: #fff;
-    z-index: 4;
-}
-
-.gg h5 {
-    position: absolute;
-    top: 300px;
-    left: 145px;
-    font-size: 50px;
-    color: #fff;
-    z-index: 4;
-}
-
-.gg h6 {
-    color: red;
-    z-index: 3;
-}
 
 .cover-img {
     position: absolute;
@@ -290,7 +259,7 @@ nav li {
     height: 812px;
     background: url(../movieCover.png);
     text-align: center;
-    z-index: 3;
+    z-index: 6;
 }
 
 .movie video {
@@ -325,7 +294,7 @@ nav li {
     height: 808px;
     background: url(../movieCover.png);
     text-align: center;
-    z-index: 3;
+    z-index: 6;
 }
 
 
@@ -337,7 +306,7 @@ nav li {
     height: 808px;
     background: url(../movieCover.png);
     text-align: center;
-    z-index: 3;
+    z-index: 6;
 }
 
 .btn-link {
@@ -417,11 +386,12 @@ nav a {
 
 .fake {
     position: absolute;
+    border-top:solid 120px black;
     top: 880px;
     left: 0;
     z-index: 2;
-    width: 1500px;
-    height: 720px;
+    width: 1440px;
+    height: 580px;
     background: linear-gradient(#202020,#D3D3D3);
 }
 
@@ -479,7 +449,8 @@ nav a {
 
 #first{
     position: absolute;
-    top: 100px;
+    top: 120px;
+    z-index: 4;
     
 }
 
