--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: black;
+    width: 1440px;
 }
 
 
@@ -276,10 +277,30 @@ ul {
     width: 100%;
     height: 700px;
     background-color: #000;
-    z-index: 1;
 }
 
-.white{
+
+.shapea {
+    position: absolute;
+    top: 1100px;
+    width: 0;
+    height: 0;
+    border-left: 1440px solid #202020;
+    border-top: 600px solid transparent;
+    z-index: 3;
+}
+
+.shapeb {
+    position: absolute;
+    top: 820px;
+    width: 0;
+    height: 0;
+    border-right: 1440px solid #c0c0c0;
+    border-top: 880px solid transparent;
+    z-index: 2;
+}
+
+.white {
     position: absolute;
     top: 140px;
     left: 340px;
@@ -288,9 +309,30 @@ ul {
     z-index: 2;
     background-color: white;
     opacity: 0.8;
+    z-index: 4; 
 }
 
-.gray{
+
+.white p {
+    position: relative;
+    color: #000;
+    font-size: 90px;
+    margin-left: 30px;
+
+}
+
+
+
+.white h1 {
+    position: relative;
+    color: #000;
+    font-size: 40px;
+    margin-left: 45px;
+
+
+}
+
+.gray {
     position: absolute;
     top: 110px;
     left: 380px;
@@ -298,54 +340,72 @@ ul {
     height: 550px;
     z-index: 2;
     background-color: gray;
+    z-index: 4;
 }
 
 
-.gray img{
+.gray img {
     position: absolute;
     top: 40px;
     right: 45px;
     height: 500px;
-    z-index: 2;
-    opacity: 0.6;
+    z-index: 3;
+    opacity: 0.9;
 }
 
 
-.backg2 {
+
+.mem {
     position: relative;
+    top: 100px;
     width: 100%;
-    height: 900px;
-    background-color: #000;
+    height: 800px;
+    padding-top: 100px;
+    background-color: #202020;
+}
+
+.in {
+    position: relative;
+    margin: auto;
+    width: 95%;
+    height: 90%;
+    padding-top: 30px;
+    background-color: #c5c5c5;
+
+}
+
+.in p {
+    position: relative;
+    background-color: #fff;
+    width: 450px;
+    height: 70px;
+    text-align: center;
+    margin-left: 30px;
+    padding: 10px;
+    font-size: 50px;
+    font-weight: 600;
+    color: white;
+    background-color: black;
+    z-index: 2;
+
+}
+
+#hide {
+    position: absolute;
+    top: 15px;
+    left: 65px;
+    width: 450px;
+    height: 90px;
+    background-color: #fff;
     z-index: 1;
 }
 
-.white2{
-    position: absolute;
-    top: 140px;
-    right: 240px;
-    width: 1100px;
-    height: 650px;
-    z-index: 2;
-    background-color: white;
-    opacity: 0.8;
-}
-
-.gray2{
-    position: absolute;
-    top: 110px;
-    right: 280px;
-    width: 1090px;
-    height: 650px;
-    z-index: 2;
-    background-color: gray;
+.member {
+    font-size: 30px;
+    color: black;
+    font-weight: 500;
+    list-style: none;
+    padding-top: 10px;
 }
 
 
-.gray2 img{
-    position: absolute;
-    top: 35px;
-    left: 45px;
-    height: 600px;
-    z-index: 2;
-    opacity: 0.6s;
-}
