--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,6 +41,8 @@ body {
     }
 }
 
+
+
 .sora h1 {
     font-weight: 1000;
     font-size: 50px;
@@ -255,7 +257,7 @@ ul {
     list-style: none;
 }
 
-.cir {
+a {
     position: absolute;
     top: 820px;
     left: 50%;
@@ -263,12 +265,8 @@ ul {
     height: 70px;
     border-radius: 50%;
     background: white;
-}
-
-
-.cir h1 {
-    color: black;
-    font-weight: 900;
+    z-index: 100;
+    text-align: center;
 }
 
 
@@ -309,7 +307,7 @@ ul {
     z-index: 2;
     background-color: white;
     opacity: 0.8;
-    z-index: 4; 
+    z-index: 4;
 }
 
 
@@ -359,7 +357,7 @@ ul {
     position: relative;
     top: 100px;
     width: 100%;
-    height: 800px;
+    height: 1500px;
     padding-top: 100px;
     background-color: #202020;
 }
@@ -367,7 +365,7 @@ ul {
 .in {
     position: relative;
     margin: auto;
-    width: 95%;
+    width: 68%;
     height: 90%;
     padding-top: 30px;
     background-color: #c5c5c5;
@@ -396,16 +394,30 @@ ul {
     left: 65px;
     width: 450px;
     height: 90px;
-    background-color: #fff;
+    background-color: #e5e5e5;
     z-index: 1;
 }
 
 .member {
-    font-size: 30px;
-    color: black;
+    font-size: 60px;
+    color: #000;
     font-weight: 500;
     list-style: none;
     padding-top: 10px;
+    margin-left: 200px;
 }
 
+.member li {
+    border-bottom: solid #1e366a 1px;
+    width: 500px;
+    padding-left: 10px;
+}
 
+.member h9{
+    margin-left: 10px;
+    font-size: 35px;
+}
+
+.member h10{
+    font-size: 20px;
+}
