--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,14 +168,14 @@ body {
 }
 
 .movie h2 {
-    font-weight: 750;
+    font-weight: 900;
     color: #fff;
     margin-left: 520px;
-    font-size: 175px;
+    font-size: 220px;
     z-index: 7;
     position: relative;
-    top: -65px;
-    right: 45px;
+    top: 475px;
+    right: 165px;
 }
 
 
@@ -314,7 +314,7 @@ a {
 .white p {
     position: relative;
     color: #000;
-    font-size: 90px;
+    font-size: 130px;
     margin-left: 30px;
 
 }
@@ -324,8 +324,9 @@ a {
 .white h1 {
     position: relative;
     color: #000;
-    font-size: 40px;
-    margin-left: 45px;
+    font-size: 30px;
+    margin-left: 60px;
+    line-height: 200%;
 
 
 }
@@ -375,25 +376,24 @@ a {
 .in p {
     position: relative;
     background-color: #fff;
-    width: 450px;
-    height: 70px;
+    width: 500px;
+    height: 120px;
     text-align: center;
     margin-left: 30px;
     padding: 10px;
-    font-size: 50px;
+    font-size: 100px;
     font-weight: 600;
     color: white;
     background-color: black;
     z-index: 2;
-
 }
 
 #hide {
     position: absolute;
     top: 15px;
     left: 65px;
-    width: 450px;
-    height: 90px;
+    width: 500px;
+    height: 120px;
     background-color: #e5e5e5;
     z-index: 1;
 }
@@ -403,7 +403,7 @@ a {
     color: #000;
     font-weight: 500;
     list-style: none;
-    padding-top: 10px;
+    margin-top: 30px;
     margin-left: 200px;
 }
 
