--- a/CSS/style.css
+++ b/CSS/style.css
@@ -257,18 +257,6 @@ ul {
     list-style: none;
 }
 
-a {
-    position: absolute;
-    top: 930px;
-    left: 50%;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background: white;
-    z-index: 100;
-    text-align: center;
-}
-
 .nav{
     position: relative;
     top: -50px;
@@ -278,7 +266,7 @@ a {
     border-bottom: 2px #fff solid;
 }
 
-.nac ul{
+.nav ul{
     display: flex;
     justify-content: center;
 
@@ -302,7 +290,7 @@ a {
 
 .shapea {
     position: absolute;
-    top: 1100px;
+    top: 1147px;
     width: 0;
     height: 0;
     border-left: 1440px solid #202020;
@@ -312,12 +300,12 @@ a {
 
 .shapeb {
     position: absolute;
-    top: 820px;
+    top: 930px;
     width: 0;
     height: 0;
     border-right: 1440px solid #c0c0c0;
     border-top: 880px solid transparent;
-    z-index: 2;
+    z-index: 0;
 }
 
 .white {
@@ -380,7 +368,7 @@ a {
     position: relative;
     top: 100px;
     width: 100%;
-    height: 1500px;
+    height: 800px;
     padding-top: 100px;
     background-color: #202020;
 }
@@ -389,7 +377,7 @@ a {
     position: relative;
     margin: auto;
     width: 80%;
-    height: 700px;
+    height: 515px;
     padding-top: 30px;
     background-color: #c5c5c5;
 
@@ -397,7 +385,6 @@ a {
 
 .in p {
     position: relative;
-    background-color: #fff;
     width: 600px;
     height: 80px;
     text-align: center;
@@ -408,6 +395,36 @@ a {
     color: white;
     background-color: black;
     z-index: 2;
+
+}
+
+.topline{
+    position: absolute;
+    top: 40px;
+    margin-left: 30px;
+    height: 2px;
+    width: 620px;
+    background-color: #fff;
+    z-index: 10;
+}
+
+
+.bottomline{
+    position: absolute;
+    top: 118px;
+    margin-left: 30px;
+    height: 2px;
+    width: 620px;
+    background-color: #fff;
+    z-index: 10;
+}
+
+.in p:before{
+    border: 100px white solid;
+}
+
+.in p:after{
+    border: 100px white solid;
 }
 
 #hide {
@@ -421,18 +438,19 @@ a {
 }
 
 .member {
-    font-size: 60px;
+    font-size: 40px;
     color: #000;
     font-weight: 500;
     list-style: none;
     margin-top: 30px;
-    margin-left: 200px;
+    margin-left: 90px;
 }
 
 .member li {
     border-bottom: solid #1e366a 1px;
-    width: 500px;
+    width: 400px;
     padding-left: 10px;
+    margin-right: 75px;
 }
 
 .member h9{
@@ -442,4 +460,8 @@ a {
 
 .member h10{
     font-size: 20px;
+}
+
+#right {
+    float: right;
 }
