--- a/CSS/style.css
+++ b/CSS/style.css
@@ -257,7 +257,7 @@ ul {
     list-style: none;
 }
 
-.nav{
+.nav {
     position: relative;
     top: -50px;
     width: 90%;
@@ -266,13 +266,13 @@ ul {
     border-bottom: 2px #fff solid;
 }
 
-.nav ul{
+.nav ul {
     display: flex;
     justify-content: center;
 
 }
 
-.nav li{
+.nav li {
     font-size: 30px;
     margin: 0 50px 0 50px;
     display: inline;
@@ -290,11 +290,11 @@ ul {
 
 .shapea {
     position: absolute;
-    top: 1147px;
+    top: 1447px;
     width: 0;
     height: 0;
     border-left: 1440px solid #202020;
-    border-top: 600px solid transparent;
+    border-top: 300px solid transparent;
     z-index: 3;
 }
 
@@ -378,7 +378,7 @@ ul {
     margin: auto;
     width: 80%;
     height: 515px;
-    padding-top: 30px;
+    padding-top: 10px;
     background-color: #c5c5c5;
 
 }
@@ -395,12 +395,14 @@ ul {
     color: white;
     background-color: black;
     z-index: 2;
+    display: flex;
+    justify-content: center;
 
 }
 
-.topline{
+.topline {
     position: absolute;
-    top: 40px;
+    top: 20px;
     margin-left: 30px;
     height: 2px;
     width: 620px;
@@ -409,9 +411,9 @@ ul {
 }
 
 
-.bottomline{
+.bottomline {
     position: absolute;
-    top: 118px;
+    top: 100px;
     margin-left: 30px;
     height: 2px;
     width: 620px;
@@ -419,20 +421,20 @@ ul {
     z-index: 10;
 }
 
-.in p:before{
+.in p:before {
     border: 100px white solid;
 }
 
-.in p:after{
+.in p:after {
     border: 100px white solid;
 }
 
 #hide {
     position: absolute;
-    top: 15px;
-    left: 65px;
+    top: 5px;
+    left: 60px;
     width: 600px;
-    height: 80px;
+    height: 100px;
     background-color: #e5e5e5;
     z-index: 1;
 }
@@ -453,15 +455,33 @@ ul {
     margin-right: 75px;
 }
 
-.member h9{
+.member h9 {
     margin-left: 10px;
     font-size: 35px;
 }
 
-.member h10{
+.member h10 {
     font-size: 20px;
 }
 
 #right {
     float: right;
+}
+
+.flag {
+    position: relative;
+    background-color: #fff;
+    width: 100%;
+    height: 1300px;
+    top: 100px;
+    background-color: #c0c0c0;
+}
+
+.bgcolor {
+    position: relative;
+    width: 0;
+    height: 0;
+    border-right: 1440px solid #202020;
+    border-bottom: 300px solid transparent;
+    z-index: 3;
 }
