--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,6 +278,12 @@ ul {
     display: inline;
 }
 
+.nav a {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+}
+
 
 
 .backg {
@@ -290,7 +296,7 @@ ul {
 
 .shapea {
     position: absolute;
-    top: 1447px;
+    top: 1467px;
     width: 0;
     height: 0;
     border-left: 1440px solid #202020;
@@ -368,7 +374,7 @@ ul {
     position: relative;
     top: 100px;
     width: 100%;
-    height: 800px;
+    height: 550px;
     padding-top: 100px;
     background-color: #202020;
 }
@@ -448,6 +454,11 @@ ul {
     margin-left: 90px;
 }
 
+.member a {
+    text-decoration: none;
+    color: #000;
+}
+
 .member li {
     border-bottom: solid #1e366a 1px;
     width: 400px;
@@ -470,11 +481,12 @@ ul {
 
 .flag {
     position: relative;
-    background-color: #fff;
+    background-color: #000;
     width: 100%;
-    height: 1300px;
-    top: 100px;
+    height: 1050px;
+    top: 25px;
     background-color: #c0c0c0;
+
 }
 
 .bgcolor {
@@ -484,4 +496,106 @@ ul {
     border-right: 1440px solid #202020;
     border-bottom: 300px solid transparent;
     z-index: 3;
+}
+
+.flag p {
+    position: relative;
+    height: 100px;
+    width: 600px;
+    font-size: 65px;
+    color: #000;
+    background-color: #fff;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    margin: 30px 0px 0px 90px;
+    z-index: 2;
+}
+
+.backshape {
+    margin: auto;
+    width: 70%;
+    height: 700px;
+    background-color: #202020;
+    padding-top: 1px;
+
+}
+
+
+#topline {
+    position: absolute;
+    top: 340px;
+    left: 256px;
+    margin-left: 30px;
+    height: 2px;
+    width: 620px;
+    background-color: #000;
+    z-index: 10;
+}
+
+
+#bottomline {
+    position: absolute;
+    top: 420px;
+    left: 256px;
+    margin-left: 30px;
+    height: 2px;
+    width: 620px;
+    background-color: #000;
+    z-index: 10;
+}
+
+#flag img {
+    position: relative;
+    height: 500px;
+    left: 19rem;
+    top: 2rem;
+}
+
+.hide2 {
+    position: absolute;
+    top: 310px;
+    left: 290px;
+    height: 100px;
+    width: 600px;
+    background-color: #404040;
+    margin: 5px 0px 0px 30px;
+    z-index: 1;
+}
+
+#flag h1 {
+    position: relative;
+    font-size: 30px;
+    width: 300px;
+    color: #fff;
+    z-index: 3;
+    left: 680px;
+}
+
+.last {
+    position: relative;
+    background-color: #000;
+    height: 30px;
+    width: 100%;
+    top: 1150px;
+
+}
+
+.last h2 {
+    position: absolute;
+    left: 46rem;
+    color: #fff;
+    font-size: 20px;
+}
+
+.last img {
+    position: absolute;
+    height: 30px;
+    left: 53rem;
+}
+
+.last h3 {
+    position: absolute;
+    left: 38rem;
+    color: #fff;
 }
